# agenticaiframework

./: .bumpversion.cfg  .coverage  .gitignore  CHANGELOG.md  COMPLETE_UPGRADE.md  DESIGN_GUIDE.md  DOCUMENTATION_DESIGN_UPDATE.md  DOCUMENTATION_UPDATE_SUMMARY.md  EVALUATION_COVERAGE_ANALYSIS.md  EVALUATION_FRAMEWORK.md  EVALUATION_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_GAPS.md  IMPROVEMENTS_SUMMARY.md  QUICK_START.md  README.md  TEST_SUITE_SUMMARY.md  core-components.md  long_term_memory.db  mkdocs.yml  pyproject.toml  requirements-docs.txt  setup.py  test_agentic_framework.py  test_import.py
.github/workflows/: ci.yml  copilot-release-notes.yml  deploy-docs.yml  python-package.yml  release-notes.yml  release.yml  static.yml
agentic_framework/: LICENSE  README.md  setup.py
agentic_framework/agentic_framework/: __init__.py  agents.py  communication.py  configurations.py  evaluation.py  guardrails.py  hub.py  knowledge.py  llms.py  mcp_tools.py  memory.py  monitoring.py  process.py  prompts.py  security.py  tasks.py
agentic_framework/docs/: framework_documentation.md
agentic_framework/examples/: knowledge_retrieval.py  memory_management.py  monitoring_observability.py  multi_agent_workflow.py
agentic_framework/tests/: test_core_components.py  test_framework.py
agenticai.egg-info/: PKG-INFO  SOURCES.txt
agenticaiframework/: __init__.py  communication.py  configurations.py  evaluation.py  evaluation_advanced.py  evaluation_base.py  hub.py  knowledge.py  mcp_tools.py  monitoring.py  processes.py  prompts.py  tasks.py  workflows.py
agenticaiframework/communication/: __init__.py  protocols.py
agenticaiframework/context/: manager.py
agenticaiframework/conversations/: logger.py  manager.py
agenticaiframework/core/: __init__.py  agent.py  manager.py
agenticaiframework/enterprise/: __init__.py  cli.py  release_manager.py  repository.py  sdlc.py
agenticaiframework/guardrails/: __init__.py  core.py  pipeline.py
agenticaiframework/hitl/: manager.py
agenticaiframework/llms/: manager.py  (+1 more)
agenticaiframeworkframework.egg-info/: PKG-INFO  SOURCES.txt
docs/: ADVANCED_FEATURES.md  API_REFERENCE.md  COMPLETE_REDESIGN_SUMMARY.md  CONFIGURATION.md  DESIGN_IMPROVEMENTS.md  EXAMPLES.md  EXTENDING.md  RELEASE_AUTOMATION.md  TESTING.md  TROUBLESHOOTING.md  USAGE.md  VISUAL_SUMMARY.md  agents.md  architecture.md  best-practices.md  cli-reference.md  communication.md  comparison.md  compliance.md  configuration-reference.md  context.md  contributing.md  deployment.md  diagrams.md  enterprise.md  evaluation.md  faq.md  features.md  guardrails.md  hub.md  index.md  infrastructure.md  integration.md  knowledge.md  llms.md  mcp_tools.md  memory.md  monitoring.md  orchestration.md  performance.md  (+10 more)
examples/: README.md  __init__.py  communication_knowledge_examples.py  enterprise_features_example.py  knowledge_retrieval.py  llm_integration.py  minimal_sdlc.py  process_advanced_example.py  process_orchestration.py  research_agent.py  secure_data_processing.py  tasks_example.py
scripts/: README.md  fix_docs.py  fix_remaining_print.py  generate_release_notes.py  generate_release_notes.sh  rewrite_docs.py  rewrite_docs2.py
tests/: README.md  __init__.py  conftest.py  test_agenticai.py  test_agenticai_additional.py  test_context_engineering.py  test_coverage_final_push.py  test_integration.py  test_llm_reliability.py  test_memory_advanced.py  test_prompts_guardrails.py  test_security.py  test_tools_import.py
(+63 files in other folders)
